bleu plot jones-2

--- a/report/report.tex
+++ b/report/report.tex
@@ -208,23 +208,25 @@ byte-pair-encoding s~různými počty slov, a to 7500, 30000, 50000 a 80000.
 
 Pro natrénování neuronového překladu jsme se rozhodli použít systém
 OpenNMT\cite{opennmt}. 
-Zde shrneme několik problémů s~tímto frameworkem, na které jsme narazili:
-
--- instalace: torch a LuaJit vs Lua5.2
-
--- padá to na nedostatek paměti
-
--- padá to bez chybové hlášky
-
--- dokumentace se rychle mění
-
--- dokumentace instalace v~jednu chvíli nebyla úplná
-
--- ve kterém luarocks se mají nainstalovat knihovny? ve kterém source?
-
-TODO
-
+%Zde shrneme několik problémů s~tímto frameworkem, na které jsme narazili:
+%
+%-- instalace: torch a LuaJit vs Lua5.2
+%
+%-- padá to na nedostatek paměti
+%
+%-- padá to bez chybové hlášky
+%
+%-- dokumentace se rychle mění
+%
+%-- dokumentace instalace v~jednu chvíli nebyla úplná
+%
+%-- ve kterém luarocks se mají nainstalovat knihovny? ve kterém source?
+%
+%TODO
+%
 \section{Evaluace podle BLEU}
+
+
 
 \section{Analýza nejlepšího překladu}
 
