--- a/report/report.tex
+++ b/report/report.tex
@@ -281,30 +281,49 @@ experimenty používat OpenNMT-Lua.
 Následující konfi
 
 -- defaultní konfigurace
+	-- validation metric: perplexity
 -- rychlost trénování
 
-\begin{itemize}
+
+
 \begin{verbatim}
-label                | data     |  BPE |  max_batch_size | layers | GPU | rychlost_1._epochy
-europarl-1gpu30000-1 | Europarl | 30k  | 
-europarl-1gpu30000-3
-europarl-1gpu30000-4
-europarl-1gpu30000-5
-europarl-1gpu30000-6
-europarl-1gpu50000-1
-europarl-1gpu7500-1
-europarl-1gpu80000-1
-
-
-osub-europarl-1gpu30000-1
-osub-europarl-1gpu50000-1
-osub-europarl-1gpu80000-1
-
-
-osub-europarl50000-2
+label                      |  data           |  BPE   |  batch  |  layers  |  GPU  |
+====================================================================================
+europarl-1gpu30000-1       |  Europarl       |  30k   |  64     |  2       |  1    |
+europarl-1gpu30000-3       |  navazuje_na-1  |  30k   |  1      |  2       |  1    |
+europarl-1gpu30000-4       |  navazuje_na-1  |  30k   |  64     |  2       |  1    |
+europarl-1gpu30000-5       |  navazuje_na-4  |  30k   |  64     |  2       |  1    |
+europarl-1gpu30000-6       |  navazuje_na-4  |  30k   |  32     |  2       |  1    |
+europarl-1gpu50000-1       |  Europarl       |  50k   |  64     |  2       |  1    |
+europarl-1gpu7500-1        |  Europarl       |  7500  |  64     |  2       |  1    |
+europarl-1gpu80000-1       |  Europarl       |  80k   |  64     |  2       |  1    |
+osub-europarl-1gpu30000-1  |  OpenSub+EuP    |  30k   |  64     |  2       |  1    |
+osub-europarl-1gpu50000-1  |  OpenSub+EuP    |  50k   |  64     |  2       |  1    |
+osub-europarl-1gpu80000-1  |  OpenSub+EuP    |  80k   |  64     |  2       |  1    |
+osub-europarl50000-2       |  OpenSub+EuP    |  50k   |  64     |  3       |  4    |
+baseline-ZEMAN             |  Eup+NewsComm   |  -     |  -      |  -       |  -    |
+ 
+label                      |  rychlost_epochy       |  epochs     |  best_test_BLEU
+====================================================================================
+europarl-1gpu30000-1       |  2min_(save_every50)   |  1-15       |  11.50
+europarl-1gpu30000-3       |  1h_(save_every2000)   |  15-21-30?  |  4.95
+europarl-1gpu30000-4       |  7m_(save_every2000)   |  15-30      |  11.55
+europarl-1gpu30000-5       |  3m_(save_every2000)   |  30-90      |  11.69
+europarl-1gpu30000-6       |  00m_(save_every2000)  |  30-90      |  11.66
+europarl-1gpu50000-1       |  7min_(save_every50)   |  1-15       |  11.27
+europarl-1gpu7500-1        |  4min_(save_every50)   |  1-15       |  10.28
+europarl-1gpu80000-1       |  90min_(save_every50)  |  1-15       |  10.89
+osub-europarl-1gpu30000-1  |  0h20m_(save_every50)  |  1-14-15?   |  14.03
+osub-europarl-1gpu50000-1  |  6h24m_(save_every50)  |  1-11-15?   |  13.76
+osub-europarl-1gpu80000-1  |  1h47m_(save_every50)  |  1-14-15?   |  14.00
+osub-europarl50000-2       |  h13m_(save_every500)  |  1-20       |  14.91
+baseline-ZEMAN             |  -                     |  -          |  13.99
 \end{verbatim}
 
-\end{itemize}
+%TODO: z logů můžeme vyčíst čas, který byl potřeba na ukládání všech checkpointů
+%time spent on checkpoint saving
+%data | iterations | save-every | batch | time-for-checkpoint-save | checkpoint-size
+
 
 \subsubsection{Průběh trénování}
 
