--- a/report/report.tex
+++ b/report/report.tex
@@ -101,6 +101,16 @@ jiná strategie než u frázového překladu a v~práci se neuvádí.
 %To, že strategie pro hrubou reprezentaci slov pro frázový překlad budou vykazovat dobré
 %výsledky i pro neuronový překlad, není zřejmé.
 
+\subsection{GoogleTranslate}
+
+
+Testovací data jsme nechali přeložit webovou službou
+GoogleTranslate\furl{TODO} a tokenizovali naším tokenizátorem. BLEU skóre
+bylo 16.59. Nevíme ale jistě, zda tvůrci GoogleTranslate nepoužili naši
+testovací množinu dat pro jeho trénink, proto bychom jeho výsledek neměli
+srovnávat s~ostatními systémy.
+
+%BLEU = 16.59, 48.2/21.9/11.6/6.3 (BP=0.993, ratio=0.993, hyp_len=56635, ref_len=57048)
 
 \section{Data}
 
@@ -272,20 +282,48 @@ Na základě těchto experimentů a faktu, že OpenNMT-py nedokáže paralelní
 trénink na více grafických kartách, jsme se rozhodli pro ostatní
 experimenty používat OpenNMT-Lua.
 
-\subsection{Trénování s~BPE a OpenNMT-Lua}
+\subsection{Trénování s OpenNMT-Lua a BPE}
+
+Pro trénování modelů jsme vycházeli z~defaultních parametrů OpenNMT, což znamená
+\begin{itemize}
+\item model type: seq2seq, 
+\item encoder type: RNN, 
+\item RNN type: LSTM, 
+\item RNN size: 500, 
+\item encoder layers: 2, decoder layers: 2 (v jednom případě jsme vyzkoušeli 3 vrstvy),
+\item optimization: SGD, 
+\item source and target vector size: 500, 
+\item validation metric: perplexity
+\end{itemize}.
 
 
+Trénování jsme prováděli dvakrát. Poprvé na Azuru, na kterém jsme měli
+k~dispozici asi 10 strojů po 4 GPU. Na nich jsme zkoušeli různé počty vrstev
+a různé druhy encoderů a decoderů, bohužel jsme ale přišli o téměř všechna data
+z~těchto pokusů. Zachránili jsme pouze přeložená data té nejlepší konfigurace, která
+se přiblížila k~baseline. Tu jsme později sputili znovu jako
+\texttt{osub-europarl50000-2}.
 
-\subsubsection{Popis konfigurací}
+Při druhém testování jsme měli k~dispozici výpočetní cluster na ÚFALu, na
+kterém jsme mohli spouštět trénování maximálně na jedné GPU, a jeden počítač na
+clusteru na Sárské univerzitě se 4 GPU. Na něm jsme replikovali pokus
+\texttt{osub-europarl50000-2}. Popis všech vyzkoušených konfigurací je v~tabulce 
+\ref{tab:config}. 
 
-Následující konfi
+U každého trénování jsme každou hodinu ukládali a zálohovali dočasný natrénovaný
+model. Na něm jsme přeložili testovací a vývojovou množinu dat a vyhodnotili
+BLEU skóre. Vývoj BLEU skóre na testovací množině podle času trénování je na
+obrázcích \ref{fig:europarl} a \ref{fig:osub}.
 
--- defaultní konfigurace
-	-- validation metric: perplexity
--- rychlost trénování
+%Rovněž jsme si u každého trénování uložili log, z kterého dokážeme vyčíst
+%další údaje, například rychlost trénování různých epoch, datum uložení každého a validační perplexity.
 
+Tabulka \ref{tab:results} udává rychlost trénování a nejlepší BLEU skóre na testovací
+množině pro danou konfiguraci.
 
+%\afterpage{\clearpage}
 
+\begin{table}[htpb]
 \begin{verbatim}
 label                      |  data           |  BPE   |  batch  |  layers  |  GPU  |  
 ====================================================================================
@@ -301,8 +339,18 @@ osub-europarl-1gpu30000-1  |  OpenSub+EuP    |  30k   |  64     |  2       |  1 
 osub-europarl-1gpu50000-1  |  OpenSub+EuP    |  50k   |  64     |  2       |  1    |  
 osub-europarl-1gpu80000-1  |  OpenSub+EuP    |  80k   |  64     |  2       |  1    |  
 osub-europarl50000-2       |  OpenSub+EuP    |  50k   |  64     |  3       |  4    |  
-baseline-ZEMAN             |  Eup+NewsComm   |  -     |  -      |  -       |  -    |
- 
+baseline-ZEMAN             |  EuP+NewsComm   |  -     |  -      |  -       |  -    |
+GoogleTranslate            |     ???         |   ?    |  ?      |  ?       |  ?    |
+\end{verbatim}
+\caption{Popis konfigurací pro trénování překladu.}
+\label{tab:config}
+%\end{table}
+%
+%
+%
+%
+%\begin{table}[h]
+\begin{verbatim}
 label                       | rychlost_epochy        |  epochs     |  best_test_BLEU
 ====================================================================================
 europarl-1gpu30000-1       |  82min_(save_every50)   |  1-15       |  11.50
@@ -318,39 +366,69 @@ osub-europarl-1gpu50000-1  |  26h24m_(save_every50)  |  1-11-15?   |  13.76
 osub-europarl-1gpu80000-1  |  21h47m_(save_every50)  |  1-14-15?   |  14.00
 osub-europarl50000-2       |  8h13m_(save_every500)  |  1-20       |  14.91
 baseline-ZEMAN             |          -              |   -         |  13.99
+GoogleTranslate            |          -              |   -         | ?16.59?
 \end{verbatim}
+\caption{Doba trénování jedné epochy, epochy, pro které jsme spouštěli
+trénování a BLEU skóre na testovací množině různých konfigurací.}
+\label{tab:results}
+\end{table}
 
-%TODO: z logů můžeme vyčíst čas, který byl potřeba na ukládání všech checkpointů
-%time spent on checkpoint saving
-%data | iterations | save-every | batch | time-for-checkpoint-save | checkpoint-size
-
-
-\subsubsection{Průběh trénování}
-
-\ref{fig:europarl}
-
-\ref{fig:osub}
-
-\begin{figure}[h]
+\begin{figure}[p]
 \centering
-  \includegraphics[width=1.3\linewidth]{europarl_test.png}
+  \includegraphics[width=\linewidth]{europarl_test.png}
     \caption{BLEU skóre na testovací množině. Trénováno na Europarlu
-	s~různými BPE.}
+	s~různými BPE a batch size.}
   \label{fig:europarl}
-\end{figure}
-
-
-\begin{figure}[h]
-\centering
-  \includegraphics[width=1.3\linewidth]{osub_europarl_test.png}
-    \caption{BLEU skóre na testovací množině. Trénováno na Europarlu
-	s~různými BPE.}
+%\end{figure}
+%\begin{figure}[b]
+%\centering
+  \includegraphics[width=\linewidth]{osub_europarl_test.png}
+    \caption{BLEU skóre na testovací množině. Trénováno na OpenSubtitles a Europarlu
+	s~různými BPE. Konfigurace \texttt{osub-europarl50000-2.eval} je trénována
+	na 4 GPU, obsahuje 3 vrstvy encoderu a decoderu. Ostatní konfigurace běžely
+	na 1 GPU a mají 2 vrstvy.}
   \label{fig:osub}
 \end{figure}
 
 
+%TODO: z logů můžeme vyčíst čas, který byl potřeba na ukládání všech checkpointů
+%time spent on checkpoint saving
+%data | iterations | save-every | batch | time-for-checkpoint-save | checkpoint-size
+% ale není to nutné
+
+\section{Porovnání různých konfigurací}
+
+Z~tabulek \ref{tab:config} a \ref{tab:results} a obrázků 
+\ref{fig:osub} a \ref{fig:europarl} vyvozujeme následující pozorování:
+
+\begin{itemize}
+
+\item Natrénovali jsme model, který má lepší BLEU skóre než baselinový frázový
+překlad. Nemůžeme ale říct, že tento model měl optimální parametry, možná
+bychom se s jinými dostali ještě dál.
+
+\item Modely natrénované na OpenSubtitles a Europarlu mají na defaultních
+parametrech lepší BLEU než ty
+natrénované pouze na Europarlu. 
+
+\item Zdá se, že různé BPE v~hodnotách 30\,000, 50\,000 a 80\,000 nehraje
+velkou roli. Důležitější než BPE je správně zvolit počet vrstev.
+
+\item Pro urychlení trénování s~OpenNMT-Lua je vhodné také správně zvolit parametry
+\texttt{-save\_every}, což je ukládání checkpointu po pevně zvoleném počtu
+iterací. Ukázalo se, že 50 je příliš nízké číslo. Každý checkpoint je totiž
+binární soubor o velikosti od 173 do 947 MB, to se liší podle BPE a počtu
+vrstev. Ukládání na disk zabírá čas a zdržuje trénink.
+  
+
+
+\end{itemize}
+
+
 
 \section{Analýza nejlepšího překladu}
+
+sd sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds  sdfsdf sdfsdfs sdfsfds 
 
 \section{Závěr}
 
