--- a/report/report.tex
+++ b/report/report.tex
@@ -319,7 +319,14 @@ obrázcích \ref{fig:europarl} a \ref{fig:osub}.
 %další údaje, například rychlost trénování různých epoch, datum uložení každého a validační perplexity.
 
 Tabulka \ref{tab:results} udává rychlost trénování a nejlepší BLEU skóre na testovací
-množině pro danou konfiguraci.
+množině pro danou konfiguraci. 
+
+Tabulka obsahuje také srovnání s~baselinovým frázovým překladem,
+GoogleTranslate.
+Přidali jsme rovněž BLEU skóre nejlepšího překladače z~angličtiny do češtiny
+z~roku 2014\furl{http://matrix.statmt.org/matrix/systems_list/1720}, u něhož
+máme k~dispozici překlad na našich testovacích datech NewsTest2013. Je jím systém
+cu-depfix\furl{http://matrix.statmt.org/matrix/output/1720?run_id=2793}
 
 %\afterpage{\clearpage}
 
@@ -339,8 +346,10 @@ osub-europarl-1gpu30000-1  |  OpenSub+EuP    |  30k   |  64     |  2       |  1 
 osub-europarl-1gpu50000-1  |  OpenSub+EuP    |  50k   |  64     |  2       |  1    |  
 osub-europarl-1gpu80000-1  |  OpenSub+EuP    |  80k   |  64     |  2       |  1    |  
 osub-europarl50000-2       |  OpenSub+EuP    |  50k   |  64     |  3       |  4    |  
+------------------------------------------------------------------------------------
 baseline-ZEMAN             |  EuP+NewsComm   |  -     |  -      |  -       |  -    |
 GoogleTranslate            |     ???         |   ?    |  ?      |  ?       |  ?    |
+cu-depfix                  |     TODO        |  -     |  -      |  -       |  -    |
 \end{verbatim}
 \caption{Popis konfigurací pro trénování překladu.}
 \label{tab:config}
@@ -365,8 +374,10 @@ osub-europarl-1gpu30000-1  |  20h20m_(save_every50)  |  1-15       |  14.15
 osub-europarl-1gpu50000-1  |  26h24m_(save_every50)  |  1-12-15*   |  14.02
 osub-europarl-1gpu80000-1  |  21h47m_(save_every50)  |  1-14-15*   |  14.00
 osub-europarl50000-2       |  8h13m_(save_every500)  |  1-20       |  14.91
+--------------------------------------------------------------------------------------
 baseline-ZEMAN             |          -              |   -         |  13.99
 GoogleTranslate            |          -              |   -         | ?16.59?
+cu-depfix                  |          -              |   -         |  19.11
 \end{verbatim}
 \caption{Doba trénování jedné epochy, epochy, pro které jsme spouštěli
 trénování (*:trénování jsme ukončili předčasně) a BLEU skóre na testovací množině různých konfigurací.}
